# lab_elettronica

./: .clang-format  .gitignore
lab1/fit/: CMakeLists.txt  calibrazione.csv  diodo_germanio.csv  diodo_germanio.cvs  diodo_silicio.csv  fit_calibrazione.cpp  fit_diodi.cpp
lab1/relazione/: build.sh  main.tex
lab1/relazione/src/: main.tex
lab1/relazione/src/appendix/: propagazione_errori_log.tex
lab1/relazione/src/sections/: acquisizione.tex  analisi.tex  circuito.tex  conclusioni.tex  example.tex  introduzione.tex
lab1/relazione/src/tabelle_e_circuito/: calibrazione.tex  circuito.tex  circuito_acquisizione.tex  circuito_calibrazione.tex  germanio.tex  silicio.tex
lab2/fit/: CMakeLists.txt  calc_params.cpp  calibrazione.csv  data_handling.cpp  dati_100uA.csv  dati_200uA.csv  diodo_silicio.csv  fit_caratteristica.cpp  grafico_aggregato.cpp  graphic_stuff.cpp
lab2/fit/include/: data_handling.hpp  graphic_stuff.h  header.hpp
lab2/relazione/src/: main.tex
lab2/relazione/src/appendix/: errori_su_beta.tex  propagazione_errori_log.tex
lab2/relazione/src/sections/: acquisizione.tex  analisi.tex  conclusioni.tex  introduzione.tex
lab2/relazione/src/tabelle_e_circuiti/: 100uA.tex  200uA.tex  circuito_acquisizione.tex  circuito_corrente_base.tex
lab2/relazione/src/tabelle_e_circuito/: 100uA.tex  200uA.tex  circuito_acquisizione.tex
